# GWEN

./: .gitignore  LICENSE.md
.github/workflows/: ccpp.yml
designer/proj/: build.bat  premake4.lua
designer/src/: Cage.cpp  Cage.h  ControlToolbox.cpp  ControlToolbox.h  DesignerBase.cpp  DesignerBase.h  Document.cpp  Document.h  DocumentCanvas.cpp  DocumentCanvas.h  Hierarchy.cpp  Hierarchy.h  Properties.cpp  Properties.h  SelectionLayer.cpp  SelectionLayer.h  Utility.h  main.cpp
gwen/: CMakeLists.txt
gwen/Projects/: Build.sh  premake4.lua
gwen/Projects/inc/: include.lua  linux.lua  macosx.lua  windows.lua
gwen/Renderers/Allegro/: Allegro.cpp
gwen/Renderers/Direct2D/: Direct2D.cpp
gwen/Renderers/DirectX10/: DirectX10.cpp
gwen/Renderers/DirectX11/: DirectX11.cpp  WICTextureLoader.cpp  WICTextureLoader.h
gwen/Renderers/DirectX9/: DirectX9.cpp  DirectX9Renderer.sln  DirectX9Renderer.vcproj
gwen/Renderers/GDIPlus/: GDIPlus.cpp  GDIPlusBuffered.cpp  GDIPlusRenderer.h
gwen/Renderers/OpenGL/: OpenGL.cpp  OpenGL_Base.cpp  glew.c  stb_image.h
gwen/Renderers/OpenGL/DebugFont/: FontData.h  OpenGL_DebugFont.cpp
gwen/Renderers/OpenGL/FontStash/: fontstash.h  gl3corefontstash.h  stb_truetype.h
gwen/Renderers/OpenGL/FreeImage/: FreeImage.h
gwen/Renderers/SFML/: SFML.cpp
gwen/Renderers/SFML2/: SFML2.cpp
gwen/Samples/Allegro/: AllegroSample.cpp
gwen/Samples/Application/: Application.cpp
gwen/Samples/CrossPlatform/: CrossPlatform.cpp
gwen/Samples/Direct2D/: Direct2DSample.cpp
gwen/Samples/Direct3D/: Direct3DSample.cpp
gwen/Samples/DirectX10/: DirectX10Sample.cpp
gwen/Samples/DirectX11/: DirectX11Sample.cpp
gwen/Samples/OpenGL/: OpenGLSample.cpp
gwen/Samples/SFML/: SFML.cpp
gwen/Samples/SFML2/: SFML2.cpp
gwen/Samples/WindowsGDI/: WindowsGDI.cpp
gwen/UnitTest/: Button.cpp  Checkbox.cpp  CollapsibleList.cpp  ColorPicker.cpp  ComboBox.cpp  CrossSplitter.cpp  GroupBox.cpp  ImagePanel.cpp  Label.cpp  LabelMultiline.cpp  ListBox.cpp  MenuStrip.cpp  Numeric.cpp  PageControl.cpp  ProgressBar.cpp  Properties.cpp  RadioButton.cpp  ReadMe.txt  ScrollControl.cpp  Slider.cpp  StatusBar.cpp  TabControl.cpp  TextBox.cpp  TreeControl.cpp  UnitTest.cpp  Window.cpp
gwen/Util/ControlFactory/: Base_Factory.cpp  Button_Factory.cpp  CheckBox_Factory.cpp  ComboBox_Factory.cpp  ControlFactory.cpp  DesignerCanvas_Factory.cpp  FilePicker_Factory.cpp  FolderPicker_Factory.cpp  Image_Factory.cpp  Label_Factory.cpp  ListBox_Factory.cpp  MenuStrip_Factory.cpp  PageControl_Factory.cpp  ProgressBar_Factory.cpp  Rectangle_Factory.cpp  Slider_Factory.cpp  TextBox_Factory.cpp  VerticalSplitter_Factory.cpp
gwen/Util/ImportExport/: Base.cpp  DesignerFormat.cpp
gwen/include/Gwen/: Align.h  Anim.h  Application.h  BaseRender.h  ControlList.h  Controls.h  Events.h  Exports.h  Font.h  Gwen.h  Hook.h  InputHandler.h  Macros.h  Platform.h  Skin.h  Structures.h  TextObject.h  Texture.h  ToolTip.h  UserData.h  Utility.h  WindowProvider.h
gwen/include/Gwen/Controls/: Base.h  Button.h  Canvas.h  CheckBox.h  CollapsibleCategory.h  CollapsibleList.h  ColorControls.h  ColorPicker.h  ComboBox.h  CrossSplitter.h  DockBase.h  DockedTabControl.h  Dragger.h  FieldLabel.h  FilePicker.h  FolderPicker.h  GroupBox.h  HSVColorPicker.h  Highlight.h  HorizontalScrollBar.h  HorizontalSlider.h  ImagePanel.h  Label.h  LabelClickable.h  ListBox.h  Menu.h  MenuItem.h  MenuStrip.h  Modal.h  NumericUpDown.h  PageControl.h  ProgressBar.h  Properties.h  PropertyTree.h  RadioButton.h  RadioButtonController.h  Rectangle.h  ResizableControl.h  Resizer.h  RichLabel.h  (+23 more)
gwen/include/Gwen/Controls/Dialogs/: FileOpen.h  FileSave.h  FolderOpen.h  Query.h
gwen/include/Gwen/Controls/Layout/: Position.h  Table.h  Tile.h
gwen/include/Gwen/Controls/Property/: BaseProperty.h  Button.h  Checkbox.h  ColorSelector.h  ComboBox.h  File.h  Folder.h  Numeric.h  Text.h
gwen/include/Gwen/Input/: Allegro.h  SDL13.h  SFML.h  Windows.h  X11.h
gwen/include/Gwen/Renderers/: Allegro.h  Direct2D.h  DirectX10.h  DirectX11.h  DirectX9.h  GDIPlus.h  OpenGL.h  OpenGL_Base.h  OpenGL_DebugFont.h  SFML.h  SFML2.h
gwen/include/Gwen/Skins/: Simple.h  TexturedBase.h  Texturing.h
gwen/include/Gwen/UnitTest/: UnitTest.h
gwen/include/Gwen/Util/: ControlFactory.h  ImportExport.h
gwen/src/: Anim.cpp  Application.cpp  BaseRender.cpp  ControlList.cpp  DragAndDrop.cpp  Gwen.cpp  Hook.cpp  Skin.cpp  ToolTip.cpp  Utility.cpp  events.cpp  inputhandler.cpp
gwen/src/Controls/: Base.cpp  Button.cpp  Canvas.cpp  CheckBox.cpp  CollapsibleCategory.cpp  ColorControls.cpp  ColorPicker.cpp  ComboBox.cpp  CrossSplitter.cpp  DockBase.cpp  DockedTabControl.cpp  Dragger.cpp  GroupBox.cpp  HSVColorPicker.cpp  HorizontalScrollBar.cpp  HorizontalSlider.cpp  Label.cpp  LabelClickable.cpp  ListBox.cpp  Menu.cpp  MenuItem.cpp  MenuStrip.cpp  NumericUpDown.cpp  PageControl.cpp  ProgressBar.cpp  Properties.cpp  PropertyTree.cpp  RadioButton.cpp  RadioButtonController.cpp  Rectangle.cpp  ResizableControl.cpp  Resizer.cpp  RichLabel.cpp  ScrollBar.cpp  ScrollBarBar.cpp  ScrollBarButton.cpp  ScrollControl.cpp  Slider.cpp  SplitterBar.cpp  TabButton.cpp  (+12 more)
gwen/src/Controls/Dialog/: FileOpen.cpp  FileSave.cpp  FolderOpen.cpp
